# AetherIME-

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: build.yml
config/: aetherime.toml
core_engine/: Cargo.toml  README.md
core_engine/src/: main.rs  personalization.rs  protocol.rs  util.rs
core_engine/src/baseline/: mixing.rs  mod.rs  scoring.rs  trie.rs
daemon/: Cargo.toml
daemon/src/: config.rs  main.rs  protocol.rs  server.rs
daemon/src/predictor/: heuristic.rs  llamacpp.rs  mod.rs  ollama.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  IPC.md  THEMES.md  architecture.md  ipc_protocol.md  test_plan.md  tsf_shell.md
fcitx5/: CMakeLists.txt  aetherime-addon.conf.in.in  aetherime.conf.in
fcitx5/src/: aetherime_addon.cpp  daemon_client.cpp  daemon_client.hpp  ghost_session.cpp  ghost_session.hpp  libime_backend.cpp  libime_backend.hpp
proto/: ipc_protocol.jsonl.md
scripts/: bootstrap-ubuntu.sh  dev.ps1  enable-ollama.sh  install-user-daemon-service.sh  register_tip.ps1  run-daemon.sh  smoke-test.sh  start_engine.ps1  stop_engine.ps1  uninstall-user-daemon-service.sh  unregister_tip.ps1
themes/deep-ocean/: theme.toml
themes/mist-light/: theme.toml
tsf_shell/: CMakeLists.txt  README.md  shurufa_tsf_shell.def
tsf_shell/include/shurufa/: Guids.h
tsf_shell/src/: ClassFactory.cpp  ClassFactory.h  ComPtr.h  DisplayAttribute.cpp  DisplayAttribute.h  DllMain.cpp  Globals.h  Guids.cpp  IpcClient.cpp  IpcClient.h  Log.cpp  Log.h  Registry.cpp  Registry.h  TextService.cpp  TextService.h  TsfGuids.cpp
